a couple of fixes

--- a/ci/prow/templates/prow_postsubmit_perfops_job.yaml
+++ b/ci/prow/templates/prow_postsubmit_perfops_job.yaml
@@ -2,8 +2,9 @@
     branches:
     - master
     agent: kubernetes
-    [[indent_section 6 "labels" .Base.Labels]]
     decorate: true
+    max_concurrency: 1
+    [[indent_section 6 "labels" .Base.Labels]]
     [[.Base.PathAlias]]
     spec:
       containers:
