address comments and more refactor

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -848,103 +848,6 @@ presubmits:
       - name: covbot-token
         secret:
           secretName: covbot-token
-  - name: pull-knative-serving-perf-tests
-    agent: kubernetes
-    context: pull-knative-serving-perf-tests
-    always_run: false
-    rerun_command: "/test pull-knative-serving-perf-tests"
-    trigger: "(?m)^/test (all|pull-knative-serving-perf-tests),?(\\s+|$)"
-    decorate: true
-    branches:
-    - "release-0.6"
-    - "release-0.7"
-    spec:
-      containers:
-      - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
-        imagePullPolicy: Always
-        command:
-        - runner.sh
-        args:
-        - "./test/performance-tests.sh"
-        volumeMounts:
-        - name: test-account
-          mountPath: /etc/test-account
-          readOnly: true
-        env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/test-account/service-account.json
-        - name: E2E_CLUSTER_REGION
-          value: us-central1
-      volumes:
-      - name: test-account
-        secret:
-          secretName: test-account
-  - name: pull-knative-serving-perf-tests
-    agent: kubernetes
-    context: pull-knative-serving-perf-tests
-    always_run: false
-    rerun_command: "/test pull-knative-serving-perf-tests"
-    trigger: "(?m)^/test (all|pull-knative-serving-perf-tests),?(\\s+|$)"
-    decorate: true
-    path_alias: knative.dev/serving
-    branches:
-    - "release-0.8"
-    - "release-0.9"
-    spec:
-      containers:
-      - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
-        imagePullPolicy: Always
-        command:
-        - runner.sh
-        args:
-        - "./test/performance-tests.sh"
-        volumeMounts:
-        - name: test-account
-          mountPath: /etc/test-account
-          readOnly: true
-        env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/test-account/service-account.json
-        - name: E2E_CLUSTER_REGION
-          value: us-central1
-      volumes:
-      - name: test-account
-        secret:
-          secretName: test-account
-  - name: pull-knative-serving-perf-tests
-    agent: kubernetes
-    context: pull-knative-serving-perf-tests
-    always_run: false
-    rerun_command: "/test pull-knative-serving-perf-tests"
-    trigger: "(?m)^/test (all|pull-knative-serving-perf-tests),?(\\s+|$)"
-    decorate: true
-    path_alias: knative.dev/serving
-    skip_branches:
-    - "release-0.6"
-    - "release-0.7"
-    - "release-0.8"
-    - "release-0.9"
-    spec:
-      containers:
-      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-        imagePullPolicy: Always
-        command:
-        - runner.sh
-        args:
-        - "./test/performance-tests.sh"
-        volumeMounts:
-        - name: test-account
-          mountPath: /etc/test-account
-          readOnly: true
-        env:
-        - name: GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/test-account/service-account.json
-        - name: E2E_CLUSTER_REGION
-          value: us-central1
-      volumes:
-      - name: test-account
-        secret:
-          secretName: test-account
   - name: pull-knative-serving-istio-1.2-mesh
     agent: kubernetes
     context: pull-knative-serving-istio-1.2-mesh
@@ -4196,83 +4099,6 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "0 */3 * * *"
-  name: ci-knative-serving-performance
-  agent: kubernetes
-  labels:
-    prow.k8s.io/pubsub.project: knative-tests
-    prow.k8s.io/pubsub.topic: knative-monitoring
-    prow.k8s.io/pubsub.runID: ci-knative-serving-performance
-  decorate: true
-  extra_refs:
-  - org: knative
-    repo: serving
-    base_ref: master
-    path_alias: knative.dev/serving
-  spec:
-    containers:
-    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-      imagePullPolicy: Always
-      command:
-      - runner.sh
-      args:
-      - "./test/performance-tests.sh"
-      volumeMounts:
-      - name: test-account
-        mountPath: /etc/test-account
-        readOnly: true
-      env:
-      - name: E2E_MIN_CLUSTER_NODES
-        value: "4"
-      - name: E2E_MAX_CLUSTER_NODES
-        value: "4"
-      - name: GOOGLE_APPLICATION_CREDENTIALS
-        value: /etc/test-account/service-account.json
-      - name: E2E_CLUSTER_REGION
-        value: us-central1
-    volumes:
-    - name: test-account
-      secret:
-        secretName: test-account
-- cron: "0 */3 * * *"
-  name: ci-knative-serving-performance-mesh
-  agent: kubernetes
-  labels:
-    prow.k8s.io/pubsub.project: knative-tests
-    prow.k8s.io/pubsub.topic: knative-monitoring
-    prow.k8s.io/pubsub.runID: ci-knative-serving-performance-mesh
-  decorate: true
-  extra_refs:
-  - org: knative
-    repo: serving
-    base_ref: master
-    path_alias: knative.dev/serving
-  spec:
-    containers:
-    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
-      imagePullPolicy: Always
-      command:
-      - runner.sh
-      args:
-      - "./test/performance-tests.sh"
-      - "--mesh"
-      volumeMounts:
-      - name: test-account
-        mountPath: /etc/test-account
-        readOnly: true
-      env:
-      - name: E2E_MIN_CLUSTER_NODES
-        value: "4"
-      - name: E2E_MAX_CLUSTER_NODES
-        value: "4"
-      - name: GOOGLE_APPLICATION_CREDENTIALS
-        value: /etc/test-account/service-account.json
-      - name: E2E_CLUSTER_REGION
-        value: us-central1
-    volumes:
-    - name: test-account
-      secret:
-        secretName: test-account
 - cron: "13 9 * * *"
   name: ci-knative-serving-webhook-apicoverage
   agent: kubernetes
@@ -6475,15 +6301,14 @@ periodics:
       command:
       - runner.sh
       args:
-      - "./test/performance/tools/recreate_clusters.sh"
+      - "./test/performance/performance-tests.sh"
+      - "--recreate-clusters"
       volumeMounts:
       - name: performance-test
         mountPath: /etc/performance-test
         readOnly: true
       env:
       - name: GOOGLE_APPLICATION_CREDENTIALS
-        value: /etc/performance-test/service-account.json
-      - name: PERF_TEST_GOOGLE_APPLICATION_CREDENTIALS
         value: /etc/performance-test/service-account.json
       - name: GITHUB_TOKEN
         value: /etc/performance-test/github-token
@@ -6515,15 +6340,14 @@ periodics:
       command:
       - runner.sh
       args:
-      - "./test/performance/tools/update_clusters.sh"
+      - "./test/performance/performance-tests.sh"
+      - "--update-clusters"
       volumeMounts:
       - name: performance-test
         mountPath: /etc/performance-test
         readOnly: true
       env:
       - name: GOOGLE_APPLICATION_CREDENTIALS
-        value: /etc/performance-test/service-account.json
-      - name: PERF_TEST_GOOGLE_APPLICATION_CREDENTIALS
         value: /etc/performance-test/service-account.json
       - name: GITHUB_TOKEN
         value: /etc/performance-test/github-token
@@ -6564,8 +6388,6 @@ periodics:
       env:
       - name: GOOGLE_APPLICATION_CREDENTIALS
         value: /etc/performance-test/service-account.json
-      - name: PERF_TEST_GOOGLE_APPLICATION_CREDENTIALS
-        value: /etc/performance-test/service-account.json
       - name: GITHUB_TOKEN
         value: /etc/performance-test/github-token
       - name: SLACK_READ_TOKEN
@@ -6605,8 +6427,6 @@ periodics:
       env:
       - name: GOOGLE_APPLICATION_CREDENTIALS
         value: /etc/performance-test/service-account.json
-      - name: PERF_TEST_GOOGLE_APPLICATION_CREDENTIALS
-        value: /etc/performance-test/service-account.json
       - name: GITHUB_TOKEN
         value: /etc/performance-test/github-token
       - name: SLACK_READ_TOKEN
@@ -6619,6 +6439,43 @@ periodics:
         secretName: eventing-performance-test
 postsubmits:
   knative/serving:
+  - name: post-knative-serving-reconcile-clusters
+    branches:
+    - master
+    agent: kubernetes
+    decorate: true
+    max_concurrency: 1
+    labels:
+      prow.k8s.io/pubsub.project: knative-tests
+      prow.k8s.io/pubsub.topic: knative-monitoring
+      prow.k8s.io/pubsub.runID: post-knative-serving-reconcile-clusters
+    path_alias: knative.dev/serving
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/performance/performance-tests.sh"
+        - "--reconcile-clusters"
+        volumeMounts:
+        - name: performance-test
+          mountPath: /etc/performance-test
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/performance-test/service-account.json
+        - name: GITHUB_TOKEN
+          value: /etc/performance-test/github-token
+        - name: SLACK_READ_TOKEN
+          value: /etc/performance-test/slack-read-token
+        - name: SLACK_WRITE_TOKEN
+          value: /etc/performance-test/slack-write-token
+      volumes:
+      - name: performance-test
+        secret:
+          secretName: performance-test
   - name: post-knative-serving-go-coverage
     branches:
     - master
@@ -6666,21 +6523,6 @@ postsubmits:
         - "--artifacts=$(ARTIFACTS)"
         - "--cov-threshold-percentage=0"
   knative/eventing:
-  - name: post-knative-eventing-go-coverage
-    branches:
-    - master
-    agent: kubernetes
-    decorate: true
-    path_alias: knative.dev/eventing
-    spec:
-      containers:
-      - image: gcr.io/knative-tests/test-infra/coverage-go112:latest
-        imagePullPolicy: Always
-        command:
-        - "/coverage"
-        args:
-        - "--artifacts=$(ARTIFACTS)"
-        - "--cov-threshold-percentage=0"
   - name: post-knative-eventing-reconcile-clusters
     branches:
     - master
@@ -6708,8 +6550,6 @@ postsubmits:
         env:
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/performance-test/service-account.json
-        - name: PERF_TEST_GOOGLE_APPLICATION_CREDENTIALS
-          value: /etc/performance-test/service-account.json
         - name: GITHUB_TOKEN
           value: /etc/performance-test/github-token
         - name: SLACK_READ_TOKEN
@@ -6720,6 +6560,21 @@ postsubmits:
       - name: eventing-performance-test
         secret:
           secretName: eventing-performance-test
+  - name: post-knative-eventing-go-coverage
+    branches:
+    - master
+    agent: kubernetes
+    decorate: true
+    path_alias: knative.dev/eventing
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/coverage-go112:latest
+        imagePullPolicy: Always
+        command:
+        - "/coverage"
+        args:
+        - "--artifacts=$(ARTIFACTS)"
+        - "--cov-threshold-percentage=0"
   knative/eventing-contrib:
   - name: post-knative-eventing-contrib-go-coverage
     branches:
