--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -15,6 +15,7 @@
 presubmits:
   knative/serving:
     - repo-settings:
+      performance: true
       legacy-branches:
       - release-0.6
       - release-0.7
@@ -46,10 +47,6 @@ presubmits:
       - "./test/e2e-smoke-tests.sh"
     - go-coverage: true
       go-coverage-threshold: 80
-    - custom-test: perf-tests
-      always_run: false
-      command:
-      - "./test/performance-tests.sh"
     - custom-test: istio-1.2-mesh
       always_run: false
       optional: true
@@ -88,6 +85,7 @@ presubmits:
 
   knative/eventing:
     - repo-settings:
+      performance: true
       legacy-branches:
       - release-0.6
       - release-0.7
@@ -259,14 +257,6 @@ periodics:
     - latency: true
       dot-dev: true
       go113: true
-    - performance: true
-      dot-dev: true
-      go113: true
-    - performance-mesh: true
-      dot-dev: true
-      go113: true
-      args:
-      - "--mesh"
     - webhook-apicoverage: true
       dot-dev: true
       go113: true
