update package path

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,9 +3,9 @@
 
 required = [
   # prow-cluster-operation is temporary solution for calling clustermanager lib
-  # from bash during e2e tests, this implicitly includes "knative.dev/pkg/testutils/metahelper"
-  # which is also needed by bash
+  # from bash during e2e tests
   "knative.dev/pkg/testutils/clustermanager/prow-cluster-operation",
+  "knative.dev/pkg/testutils/metahelper",
   "knative.dev/pkg/testutils/clustermanager/perf-tests"
 ]
 
