Add periodic job to test operator with latest serving

--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -357,6 +357,12 @@ periodics:
     - auto-release: true
       dot-dev: true
       go113: true
+    - auto-release: true
+      dot-dev: true
+    - custom-test: integration-tests-on-latest-knative-serving
+      command:
+        - "./test/e2e-tests-latest-serving.sh"
+      dot-dev: true
 
   knative/eventing-operator:
     - continuous: true
