--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -175,7 +175,8 @@ presubmits:
     - custom-test: integration-tests-on-latest-serving
       always_run: false
       optional: true
-      command:
+      args:
+      - "--run-test"
       - "./test/e2e-tests-latest-serving.sh"
 
   knative/eventing-operator:
@@ -363,7 +364,8 @@ periodics:
       dot-dev: true
       go113: true
     - custom-job: integration-tests-on-latest-serving
-      command:
+      args:
+      - "--run-test"
       - "./test/e2e-tests-latest-serving.sh"
       dot-dev: true
       go113: true
