--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -364,11 +364,7 @@ periodics:
       dot-dev: true
       go113: true
     - custom-job: integration-tests-on-latest-serving
-      command:
-      - "./test/presubmit-tests.sh"
-      args:
-      - "--run-test"
-      - "./test/e2e-tests-latest-serving.sh"
+      command: "./test/e2e-tests-latest-serving.sh"
       dot-dev: true
       go113: true
 
