--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -865,6 +865,8 @@ presubmits:
         command:
         - runner.sh
         args:
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
         - "./test/performance-tests.sh"
         volumeMounts:
         - name: test-account
@@ -897,6 +899,8 @@ presubmits:
         command:
         - runner.sh
         args:
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
         - "./test/performance-tests.sh"
         volumeMounts:
         - name: test-account
@@ -931,6 +935,8 @@ presubmits:
         command:
         - runner.sh
         args:
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
         - "./test/performance-tests.sh"
         volumeMounts:
         - name: test-account
@@ -963,10 +969,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.2-latest"
-        - "--mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -999,10 +1004,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.2-latest"
-        - "--mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1037,10 +1041,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.2-latest"
-        - "--mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1072,10 +1075,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.2-latest"
-        - "--no-mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1108,10 +1110,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.2-latest"
-        - "--no-mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1146,10 +1147,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.2-latest"
-        - "--no-mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1181,10 +1181,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.3-latest"
-        - "--mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.3-latest --mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1217,10 +1216,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.3-latest"
-        - "--mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.3-latest --mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1255,10 +1253,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.3-latest"
-        - "--mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.3-latest --mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1290,10 +1287,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.3-latest"
-        - "--no-mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1326,10 +1322,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.3-latest"
-        - "--no-mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1364,10 +1359,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--istio-version"
-        - "1.3-latest"
-        - "--no-mesh"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1399,9 +1393,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--gloo-version"
-        - "0.17.1"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --gloo-version 0.17.1"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1434,9 +1428,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--gloo-version"
-        - "0.17.1"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --gloo-version 0.17.1"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1471,9 +1465,9 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/e2e-tests.sh"
-        - "--gloo-version"
-        - "0.17.1"
+        - "./test/presubmit-tests.sh"
+        - "--run-test"
+        - "./test/e2e-tests.sh --gloo-version 0.17.1"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
