--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -48,28 +48,39 @@ presubmits:
       go-coverage-threshold: 80
     - custom-test: perf-tests
       always_run: false
-      command:
+      args:
+      - "--run-test"
       - "./test/performance-tests.sh"
     - custom-test: istio-1.2-mesh
       always_run: false
       optional: true
-      full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
+      args:
+      - "--run-test"
+      - "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
     - custom-test: istio-1.2-no-mesh
       always_run: false
       optional: true
-      full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
+      args:
+      - "--run-test"
+      - "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
     - custom-test: istio-1.3-mesh
       always_run: false
       optional: true
-      full-command: "./test/e2e-tests.sh --istio-version 1.3-latest --mesh"
+      args:
+      - "--run-test"
+      - "./test/e2e-tests.sh --istio-version 1.3-latest --mesh"
     - custom-test: istio-1.3-no-mesh
       always_run: false
       optional: true
-      full-command: "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
+      args:
+      - "--run-test"
+      - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh"
     - custom-test: gloo-0.17.1
       always_run: false
       optional: true
-      full-command: "./test/e2e-tests.sh --gloo-version 0.17.1"
+      args:
+      - "--run-test"
+      - "./test/e2e-tests.sh --gloo-version 0.17.1"
 
   knative/client:
     - build-tests: true
