Configure knative/community for tide
knative/community only uses tide, but a presubmit entry is required to generate the config. Thus, add a presubmit entry with no presubmit tests enabled.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -92,6 +92,7 @@ tide:
     - "google/knative-gcp"
     - "knative/caching"
     - "knative/client"
+    - "knative/community"
     - "knative/docs"
     - "knative/eventing"
     - "knative/eventing-contrib"
