--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -17,10 +17,8 @@ presubmits:
     - repo-settings:
       performance: true
       legacy-branches:
-      - release-0.6
       - release-0.7
       go112-branches:
-      - release-0.6
       - release-0.7
       - release-0.8
       - release-0.9
@@ -40,8 +38,6 @@ presubmits:
       - "--run-test"
       - "./test/e2e-upgrade-tests.sh --istio-version 1.2-latest --no-mesh"
     - custom-test: smoke-tests
-      skip_branches:  # Skip these branches, as test isn't available.
-      - release-0.6
       args:
       - "--run-test"
       - "./test/e2e-smoke-tests.sh"
@@ -97,7 +93,6 @@ presubmits:
     - repo-settings:
       performance: true
       legacy-branches:
-      - release-0.6
       - release-0.7
       - release-0.8
     - build-tests: true
@@ -108,7 +103,6 @@ presubmits:
   knative/eventing-contrib:
     - repo-settings:
       legacy-branches:
-      - release-0.6
       - release-0.7
       - release-0.8
     - build-tests: true
@@ -223,14 +217,15 @@ periodics:
         limits:
           memory: 16Gi
     - branch-ci: true
-      release: "0.6"
-    - branch-ci: true
       release: "0.7"
     - branch-ci: true
       release: "0.8"
       dot-dev: true
     - branch-ci: true
       release: "0.9"
+      dot-dev: true
+    - branch-ci: true
+      release: "0.10"
       dot-dev: true
     - custom-job: istio-1.2-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
@@ -261,9 +256,8 @@ periodics:
         limits:
           memory: 16Gi
     - dot-release: true
-      # TODO(chaodaiG): dot-release will need to use go1.13 after branch
-      # release-0.10 is cut
       dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -300,13 +294,14 @@ periodics:
       timeout: 90
       dot-dev: true
     - branch-ci: true
-      release: "0.6"
-    - branch-ci: true
       release: "0.7"
     - branch-ci: true
       release: "0.8"
     - branch-ci: true
       release: "0.9"
+      dot-dev: true
+    - branch-ci: true
+      release: "0.10"
       dot-dev: true
     - nightly: true
       dot-dev: true
@@ -319,13 +314,14 @@ periodics:
     - continuous: true
       dot-dev: true
     - branch-ci: true
-      release: "0.6"
-    - branch-ci: true
       release: "0.7"
     - branch-ci: true
       release: "0.8"
     - branch-ci: true
       release: "0.9"
+      dot-dev: true
+    - branch-ci: true
+      release: "0.10"
       dot-dev: true
     - nightly: true
       dot-dev: true
@@ -361,9 +357,8 @@ periodics:
       dot-dev: true
       go113: true
     - dot-release: true
-      # TODO(chaodaiG): dot-release will need to use go1.13 after branch
-      # release-0.10 is cut
       dot-dev: true
+      go113: true
     - auto-release: true
       dot-dev: true
       go113: true
