--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -235,6 +235,7 @@ periodics:
     - branch-ci: true
       release: "0.10"
       dot-dev: true
+      go113: true
     - custom-job: istio-1.2-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
       dot-dev: true
