Run the cleanup job every 6h
After the initial backlog is taken care of, this should keep the Boskos projects pretty clean, as cleaning up often reduces the backlog and thus avoids the cleanup job timing out.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -5971,7 +5971,7 @@ periodics:
       args:
       - "--artifacts=$(ARTIFACTS)"
       - "--cov-threshold-percentage=50"
-- cron: "0 19 * * 1"
+- cron: "0 */6 * * *"
   name: ci-knative-cleanup
   labels:
       prow.k8s.io/pubsub.project: knative-tests
