--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2298,6 +2298,34 @@ presubmits:
       - name: covbot-token
         secret:
           secretName: covbot-token
+  - name: pull-knative-docs-markdown-link-check
+    agent: kubernetes
+    context: pull-knative-docs-markdown-link-check
+    always_run: true
+    rerun_command: "/test pull-knative-docs-markdown-link-check"
+    trigger: "(?m)^/test (all|pull-knative-docs-markdown-link-check),?(\\s+|$)"
+    decorate: true
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-link-check.sh"
+        volumeMounts:
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: test-account
+        secret:
+          secretName: test-account
   knative/pkg:
   - name: pull-knative-pkg-build-tests
     agent: kubernetes
