Add prow config for knative/sample-source

--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -177,6 +177,12 @@ presubmits:
     - unit-tests: true
       dot-dev: true
 
+  knative/sample-source:
+    - build-tests: true
+      dot-dev: true
+    - unit-tests: true
+      dot-dev: true
+
   google/knative-gcp:
     - repo-settings:
       performance: true
