--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -101,6 +101,7 @@ tide:
     - "knative/observability"
     - "knative/pkg"
     - "knative/sample-controller"
+    - "knative/sample-source"
     - "knative/serving"
     - "knative/serving-operator"
     - "knative/test-infra"
@@ -3022,6 +3023,83 @@ presubmits:
     trigger: "(?m)^/test (all|pull-knative-sample-controller-unit-tests),?(\\s+|$)"
     decorate: true
     path_alias: knative.dev/sample-controller
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--unit-tests"
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: test-account
+        secret:
+          secretName: test-account
+  knative/sample-source:
+  - name: pull-knative-sample-source-build-tests
+    agent: kubernetes
+    context: pull-knative-sample-source-build-tests
+    always_run: true
+    rerun_command: "/test pull-knative-sample-source-build-tests"
+    trigger: "(?m)^/test (all|pull-knative-sample-source-build-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/sample-source
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--build-tests"
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: test-account
+        secret:
+          secretName: test-account
+  - name: pull-knative-sample-source-unit-tests
+    agent: kubernetes
+    labels:
+      prow.k8s.io/pubsub.project: knative-tests
+      prow.k8s.io/pubsub.topic: knative-monitoring
+      prow.k8s.io/pubsub.runID: pull-knative-sample-source-unit-tests
+    context: pull-knative-sample-source-unit-tests
+    always_run: true
+    rerun_command: "/test pull-knative-sample-source-unit-tests"
+    trigger: "(?m)^/test (all|pull-knative-sample-source-unit-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/sample-source
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
