Add labels "proposal/0.[11-19]" to Prow's /label plugin

--- a/ci/prow/plugins.yaml
+++ b/ci/prow/plugins.yaml
@@ -61,6 +61,18 @@ project_config:
         eventing-contrib:
           # TODO(grantr): replace with a new team eventing-contrib-project-maintainers
           repo_maintainers_team_id: 3012514 # knative-milestone-maintainers
+# Settings for the "label" plugin.
+label:
+  additional_labels:
+  - proposal/0.11
+  - proposal/0.12
+  - proposal/0.13
+  - proposal/0.14
+  - proposal/0.15
+  - proposal/0.16
+  - proposal/0.17
+  - proposal/0.18
+  - proposal/0.19
 # Plugins enabled for each repo.
 plugins:
   google/knative-gcp:
