--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -6508,6 +6508,36 @@ periodics:
     - name: nightly-account
       secret:
         secretName: nightly-account
+- cron: "0 13 * * *"
+  name: ci-knative-client-tekton
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: client
+    base_ref: master
+    path_alias: knative.dev/client
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      command:
+      - runner.sh
+      args:
+      - "./test/tekton-tests.sh"
+      volumeMounts:
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: E2E_CLUSTER_REGION
+        value: us-central1
+    volumes:
+    - name: test-account
+      secret:
+        secretName: test-account
 - cron: "21 9 * * 2"
   name: ci-knative-client-dot-release
   agent: kubernetes
