--- a/ci/prow/testgrid.yaml
+++ b/ci/prow/testgrid.yaml
@@ -106,6 +106,10 @@ test_groups:
   num_failures_to_alert: 3
 - name: ci-knative-client-nightly-release
   gcs_prefix: knative-prow/logs/ci-knative-client-nightly-release
+- name: ci-knative-client-tekton
+  gcs_prefix: knative-prow/logs/ci-knative-client-tekton
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
 - name: ci-knative-client-dot-release
   gcs_prefix: knative-prow/logs/ci-knative-client-dot-release
   alert_stale_results_hours: 170
@@ -317,6 +321,9 @@ dashboards:
     base_options: "sort-by-name="
   - name: nightly
     test_group_name: ci-knative-client-nightly-release
+    base_options: "sort-by-name="
+  - name: tekton
+    test_group_name: ci-knative-client-tekton
     base_options: "sort-by-name="
   - name: dot-release
     test_group_name: ci-knative-client-dot-release
